<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/designation"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/salarySelect"
                android:layout_weight="1"
                android:text="@string/designation"
                android:textSize="20sp"
                android:fontFamily="@font/nunito_sans"
                />
          <Spinner
              android:layout_width="match_parent"
              android:layout_weight="1"
              android:paddingEnd="20dp"
              android:paddingRight="20dp"
              android:paddingStart="0dp"
              android:paddingLeft="0dp"
              style="@style/TextAppearance.AppCompat.Medium"
              android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/monthLayout"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/months"
                android:layout_weight="1"
                android:text="@string/month"
                android:textSize="20sp"
                android:fontFamily="@font/nunito_sans"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:id="@+id/selectMonths"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/IdLayout"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/monthLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Id"
                android:layout_weight="1"
                android:text="@string/id"
                android:gravity="start"
                android:textSize="20sp"
                android:fontFamily="@font/nunito_sans"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:id="@+id/idInput"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/SalaryLayout"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/IdLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/salary"
                android:layout_weight="1"
                android:text="@string/salary"
                android:gravity="start"
                android:textSize="20sp"
                android:fontFamily="@font/nunito_sans"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:id="@+id/salaryInput"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/submit"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/SalaryLayout"
            android:layout_marginRight="10dp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
