<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LabTestsText"
            android:layout_margin="10dp"
            android:text="@string/lab_tests"
            android:textSize="25sp"
            android:textColor="#000"
            android:fontFamily="@font/overpass_semibold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateLabTests"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/LabTestsText"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textColor="#000"
            android:text="14 March 2020"
            android:fontFamily="@font/nunito_sans"
            android:textSize="15sp"
            android:layout_marginEnd="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/dateLabTests"
            android:orientation="horizontal"
            android:id="@+id/treatmentTestsLayout"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/treatment_id"
                android:textColor="#000"
                android:textSize="20sp"
                android:gravity="start"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/testsPrescription"
                android:textSize="20sp"
                android:textColor="#000"
                android:fontFamily="@font/nunito_sans"
                android:gravity="start"
                android:text=" 12345678"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/treatmentTestsLayout"
            android:orientation="horizontal"
            android:id="@+id/patientTestLayout"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/patient_id"
                android:textSize="20sp"
                android:gravity="start"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="#000"
                android:id="@+id/PatientIdTests"
                android:fontFamily="@font/nunito_sans"
                android:gravity="start"
                android:text=" 12345678"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/patientTestLayout"
            android:orientation="horizontal"
            android:id="@+id/doctorTestLayout"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/doctor_s_name"
                android:textSize="20sp"
                android:textColor="#000"
                android:gravity="start"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="#000"
                android:id="@+id/doctorsNamePrescription"
                android:fontFamily="@font/nunito_sans"
                android:gravity="start"
                android:text=" Doctor Strange"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/tests"
            android:textSize="25sp"
            android:id="@+id/testsText"
            android:textColor="#000"
            android:fontFamily="@font/actor"
            android:layout_below="@id/doctorTestLayout"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_below="@id/testsText"
            android:id="@+id/recyclerTests"
            android:layout_height="wrap_content"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/commentlayout"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/recyclerTests"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/commentLabTest"
                android:fontFamily="@font/overpass_semibold"
                android:hint="Enter Comments ">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg"
            android:layout_below="@+id/commentlayout"
            android:layout_marginRight="15dp"
            android:text="@string/submit"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/overpass_semibold"
            android:layout_marginEnd="15dp" />
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>