<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prescriptionText"
            android:layout_margin="10dp"
            android:textColor="#000"
            android:text="@string/prescription"
            android:textSize="25sp"
            android:fontFamily="@font/overpass_semibold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePrescription"
            android:layout_alignParentEnd="true"
            android:textColor="#000"
            android:layout_below="@+id/prescriptionText"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="14 March 2020"
            android:fontFamily="@font/nunito_sans"
            android:textSize="15sp"
            android:layout_marginEnd="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/datePrescription"
            android:orientation="horizontal"
            android:id="@+id/treatmentPrescriptionLayout"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/treatment_id"
                android:textSize="20sp"
                android:gravity="start"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:id="@+id/treatmentIdPrescription"
                android:textSize="20sp"
                android:fontFamily="@font/nunito_sans"
                android:gravity="start"
                android:text=" 12345678"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/treatmentPrescriptionLayout"
            android:orientation="horizontal"
            android:id="@+id/patientPrescriptionLayout"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/patient_id"
                android:textColor="#000"
                android:textSize="20sp"
                android:gravity="start"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:maxLength="6"
                android:inputType="number"
                android:textColor="#000"
                android:id="@+id/PatientIdPrescription"
                android:fontFamily="@font/nunito_sans"
                android:gravity="start"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/patientPrescriptionLayout"
            android:orientation="horizontal"
            android:id="@+id/doctorPrescriptionLayout"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/doctor_s_name"
                android:textColor="#000"
                android:textSize="20sp"
                android:gravity="start"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:id="@+id/doctorsNamePrescription"
                android:fontFamily="@font/nunito_sans"
                android:gravity="start"
                android:textColor="#000"
                android:text=" Doctor Strange"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/treatment"
            android:textSize="25sp"
            android:textColor="#000"
            android:id="@+id/treatmentText"
            android:fontFamily="@font/overpass_semibold"
            android:layout_below="@id/doctorPrescriptionLayout"/>

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/addButton"
            android:background="@drawable/ic_add_black_24dp"
            android:layout_below="@+id/treatmentText"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_below="@id/addButton"
            android:id="@+id/recyclerPrescription"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/prescriptionlayout"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/recyclerPrescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/commentPrescription"
                android:fontFamily="@font/overpass_semibold"
                android:hint="Enter Prescription Comments " >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:background="@drawable/button_bg"
            android:layout_below="@+id/prescriptionlayout"
            android:layout_marginRight="15dp"
            android:text="@string/submit"
            android:fontFamily="@font/overpass_semibold"
            android:layout_marginEnd="15dp" />
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
