<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AssignRoomDate"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="14 March 2020"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginRight="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_below="@+id/AssignRoomDate"
            android:id="@+id/treatmentIdLayout"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/treatment_id"
                android:textSize="20sp"
                android:gravity="start"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:inputType="number"
                android:id="@+id/treatmentIdInput"
                android:textColor="#000"
                android:fontFamily="@font/nunito_sans"
                android:gravity="start"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:id="@+id/PatientIdLayout"
            android:layout_below="@id/treatmentIdLayout"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/patient_id"
                android:textSize="20sp"
                android:gravity="start"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:inputType="number"
                android:id="@+id/patientIDInput"
                android:textColor="#000"
                android:fontFamily="@font/nunito_sans"
                android:gravity="start"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:id="@+id/RoomLayout"
            android:layout_below="@id/PatientIdLayout"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/room_number"
                android:textSize="20sp"
                android:gravity="start"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="#000"
                android:inputType="number"
                android:id="@+id/RoomNumberInput"
                android:fontFamily="@font/nunito_sans"
                android:gravity="start"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#000"
            android:text="@string/doctor_s_assigned"
            android:fontFamily="@font/nunito_sans"
            android:id="@+id/doctorsAssignedText"
            android:layout_below="@id/RoomLayout"
            android:textSize="20sp"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/addButton"
            android:foreground="@drawable/ic_add_black_24dp"
            android:background="?android:attr/selectableItemBackground"
            android:layout_below="@+id/doctorsAssignedText"
            />
        <RelativeLayout android:layout_width="match_parent"
            android:id="@+id/medicineDetailTable"
            android:layout_below="@id/addButton"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content">
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/roomsList"
            android:layout_above="@+id/submitRooms"
            android:layout_below="@+id/medicineDetailTable"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/submitRooms"
            android:background="@drawable/button_bg"
            android:layout_marginRight="10dp"
            android:text="@string/submit"
            android:textColor="#000"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/overpass_semibold"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>