<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:id="@+id/treatmentIdLayout"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/treatment_id"
                android:textSize="20sp"
                android:gravity="start"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:fontFamily="@font/nunito_sans"
                android:gravity="start"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:id="@+id/PatientIdLayout"
            android:layout_below="@id/treatmentIdLayout"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/patient_id"
                android:textSize="20sp"
                android:gravity="start"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:fontFamily="@font/nunito_sans"
                android:gravity="start"
             />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:id="@+id/RoomLayout"
            android:layout_below="@id/PatientIdLayout"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_sans"
                android:text="@string/room_number"
                android:textSize="20sp"
                android:gravity="start"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:fontFamily="@font/nunito_sans"
                android:gravity="start"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/doctor_s_assigned"
            android:fontFamily="@font/nunito_sans"
            android:id="@+id/doctorsAssignedText"
            android:layout_below="@id/RoomLayout"
            android:textSize="20sp"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/addButton"
            android:background="@drawable/ic_add_black_24dp"
            android:layout_below="@+id/doctorsAssignedText"
            />
        <RelativeLayout android:layout_width="match_parent"
            android:id="@+id/medicineDetailTable"
            android:layout_below="@id/addButton"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"

                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:fontFamily="@font/nunito_sans"
                    android:id="@+id/MedicineName"
                    android:text="Medicine Name"/>
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="#222"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:fontFamily="@font/nunito_sans"
                    android:id="@+id/medicineQuantity"
                    android:text="Quantity"
                    />
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="#222"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:fontFamily="@font/nunito_sans"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/medicineDosage"
                    android:text="Dosage"/>

            </LinearLayout>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/doctorsList"
            android:layout_above="@+id/submitRooms"
            android:layout_below="@+id/medicineDetailTable"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/submitRooms"
            android:layout_marginRight="10dp"
            android:text="@string/submit"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/nunito_sans"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>